--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Noah Ham</title>
+    <link rel="icon" type="image/x-icon" href="/assets/Untitled-1.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
