--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Noah Ham</title>
-    <link rel="icon" type="image/x-icon" href="/Portfolio-Website/assets/favicon.png?">
+    <link rel="icon" href="/Portfolio-Website/assets/favicon.png?" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
