--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- ABOUT SCREEN -->
         <div class="section" id="about">
             <h1 class="section-head">about</h1>
-            <p style="line-height: 1.5rem;">I'm Noah, currently studying computer science as a freshman at the University of Oregon.<br><br>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m currently working on several personal projects while also being a full-time student.<br><br>Feel free to contact me on any of the platforms below.</p>
+            <p style="line-height: 1.5rem;">I'm Noah, currently studying computer science as a freshman at the University of Oregon.<br><br>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m currently working on several personal projects while also being a full-time student.<br><br>If you're interested in working on anything together, feel free to contact me on any of the platforms below.</p>
             <div class="socials">
                 <a href="mailto:noahham25@gmail.com" target="_blank" class="social-link"><p class="social-text">email</p></a>
                 <a href="https://www.linkedin.com/in/noahham/" target="_blank" class="social-link"><p class="social-text">linkedin</p></a>
