--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <p class="card-description">Hey look, it's this website.</p>
                     </a>
                     <a href="https://github.com/sbergcoding/quack_hacks_2025_2.0" target="_blank" class="card">
-                        <h2 class="card-title">Bite 'n Bite</h2>
+                        <h2 class="card-title">Byte 'n Bite</h2>
                         <p class="card-description"><i>Frontend Developer</i></p>
                         <p class="card-description">An AI powered recipe generator.</p>
                     </a>
