--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <body>
         <nav class="nav-bar">
             <a href="#name" class="nav-link"><h3>nh</h3></a>
+            <a href="#experience" class="nav-link"><h3>experience</h3></a>
             <a href="#projects" class="nav-link"><h3>projects</h3></a>
             <a href="#about" class="nav-link"><h3>about</h3></a>
         </nav>
         <main class="main">
             <!-- HERO SCREEN -->
-            <a href="#projects" class="section" id="name">
+            <a href="#experience" class="section" id="name">
                 <h1 class="hero-title">noah</h1>
                 <div style="display:flex;">
                     <h1 class="hero-title" id="ham">ham</h1>
@@ -23,6 +24,43 @@
                 <h1 class="hero-title dot">..</h1>
                 <h1 class="hero-title dot">.</h1>
             </a>
+            <!-- ABOUT SCREEN -->
+            <div class="section" id="experience">
+                <h1 class="section-head">experience</h1>
+                <div class="timeline-holder">
+                    <div class="timeline-block">
+                        <div class="timeline-space"></div>
+                        <div class="timeline-text">
+                            <h2 class="card-title" style="text-align:right;">Five Below</h2>
+                            <p class="card-description" style="text-align:right;"><i>Store Associate</i></p>
+                            <p class="card-description" style="text-align:right;">Feb 2022 - Sep 2024</p>
+                        </div>
+                    </div>
+                    <div style="margin-top: 10px">
+                        <div class="timeline-dot"></div>
+                        <div class="line"></div>
+                        <div class="timeline-dot"></div>
+                        <div class="line"></div>
+                        <div class="timeline-dot"></div>
+                        <div class="line"></div>
+                    </div>
+                    <div class="timeline-block">
+                        <div class="timeline-text">
+                            <h2 class="card-title">Graduated High School</h2>
+                            <p class="card-description"><i>Vista Del Lago</i></p>
+                            <p class="card-description">Aug 2020 - May 2024</p>
+                        </div>
+
+                        <div class="timeline-space"></div>
+
+                        <div class="timeline-text">
+                            <h2 class="card-title">Enrolled in College</h2>
+                            <p class="card-description"><i>University of Oregon</i></p>
+                            <p class="card-description">Sep 2024 - Jun 2028</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- PROJECTS SCREEN -->
             <div class="section" id="projects">
                 <h1 class="section-head">projects</h1>
