experience section update

--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
                 <h1 class="section-head">experience</h1>
                 <div class="timeline-holder">
                     <div class="timeline-block">
+                        <div class="timeline-text">
+                            <h2 class="card-title" style="text-align:right;">Feb 2022 - Sep 2024</h2>
+                            <p class="card-description" style="text-align:right;">Worked as a store associate at a Five Below retail store.</p>
+                        </div>
                         <div class="timeline-space"></div>
                         <div class="timeline-text">
-                            <h2 class="card-title" style="text-align:right;">Five Below</h2>
-                            <p class="card-description" style="text-align:right;"><i>Store Associate</i></p>
-                            <p class="card-description" style="text-align:right;">Feb 2022 - Sep 2024</p>
+                            <h2 class="card-title" style="text-align:right;">Jan 2025</h2>
+                            <p class="card-description" style="text-align:right;">Participated in and placed top ten of the QuackHacks 2025 hackathon.</p>
                         </div>
                     </div>
                     <div style="margin-top: 10px">
@@ -43,20 +46,16 @@
                         <div class="line"></div>
                         <div class="timeline-dot"></div>
                         <div class="line"></div>
+                        <div class="timeline-dot"></div>
                     </div>
                     <div class="timeline-block">
                         <div class="timeline-text">
-                            <h2 class="card-title">Graduated High School</h2>
-                            <p class="card-description"><i>Vista Del Lago</i></p>
-                            <p class="card-description">Aug 2020 - May 2024</p>
+                            <h2 class="card-title">May 2024</h2>
+                            <p class="card-description">Graduated from Vista Del Lago High School with a 4.0 GPA.</p>
                         </div>
-
-                        <div class="timeline-space"></div>
-
                         <div class="timeline-text">
-                            <h2 class="card-title">Enrolled in College</h2>
-                            <p class="card-description"><i>University of Oregon</i></p>
-                            <p class="card-description">Sep 2024 - Jun 2028</p>
+                            <h2 class="card-title">Sep 2024</h2>
+                            <p class="card-description">Enrolled in the University of Oregon as a Computer Science major.</p>
                         </div>
                     </div>
                 </div>
