added photography protfolio project

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
                         <p class="card-description"><i>Solo Developer</i></p>
                         <p class="card-description">A handy app to help with the daily Wordle.</p>
                     </a>
+                    <a href="https://github.com/noahham/Photography-Portfolio" target="_blank" class="card">
+                        <h2 class="card-title">Photography Portfolio</h2>
+                        <p class="card-description"><i>Solo Developer</i></p>
+                        <p class="card-description">A stylish website to show my photography.</p>
+                    </a>
                 </div>
             </div>
             <!-- ABOUT SCREEN -->
