mobile query updates

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <a href="#experience" class="section" id="name" style="overflow:hidden;">
                 <h1 class="hero-title">noah</h1>
                 <div style="display:flex;">
-                    <h1 class="hero-title" id="ham">ham</h1>
+                    <h1 class="hero-title" id="ham" style="margin-bottom:4rem;">ham</h1>
                     <h1 class="fading-dot">::</h1>
                 </div>
                 <h1 class="hero-title dot">..</h1>
                 <h1 class="hero-title dot">.</h1>
             </a>
-            <!-- ABOUT SCREEN -->
+            <!-- EXPERIENCE SCREEN -->
             <div class="section" id="experience">
                 <h1 class="section-head">experience</h1>
                 <div class="timeline-holder">
