mobile responsiveness update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
         <main class="main">
             <!-- HERO SCREEN -->
-            <a href="#experience" class="section" id="name" style="overflow:hidden;">
+            <a href="#experience" class="section" id="name">
                 <h1 class="hero-title">noah</h1>
                 <div style="display:flex;">
                     <h1 class="hero-title" id="ham" style="margin-bottom:4rem;">ham</h1>
