removed section headers and optimizations

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </a>
             <!-- EXPERIENCE SCREEN -->
             <div class="section" id="experience">
-                <h1 class="section-head">experience</h1>
+<!--                <h1 class="section-head">experience</h1>-->
                 <div class="timeline-holder">
                     <div class="timeline-block">
                         <div class="timeline-text">
@@ -62,7 +62,7 @@
             </div>
             <!-- PROJECTS SCREEN -->
             <div class="section" id="projects">
-                <h1 class="section-head">projects</h1>
+<!--                <h1 class="section-head">projects</h1>-->
                 <div class="card-holder">
                     <a href="https://github.com/noahham/Portfolio-Website" target="_blank" class="card">
                         <h2 class="card-title">Portfolio Website</h2>
@@ -93,7 +93,7 @@
             </div>
             <!-- ABOUT SCREEN -->
             <div class="section" id="about">
-                <h1 class="section-head">about</h1>
+<!--                <h1 class="section-head">about</h1>-->
                 <p>I'm Noah, currently studying computer science as a freshman at the University of Oregon.<br><br>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m currently working on several personal projects while also being a full-time student.<br><br>If you're interested in working on anything together, feel free to contact me on any of the platforms below.</p>
                 <div class="socials">
                     <a href="mailto:noahham25@gmail.com" target="_blank"><p class="social-text">email</p></a>
