experience and resume updates

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                         </div>
                         <div class="timeline-space"></div>
                         <div class="timeline-text">
-                            <h2 class="card-title" style="text-align:right;">Jan 2025</h2>
-                            <p class="card-description" style="text-align:right;">Participated in and placed top ten of the QuackHacks 2025 hackathon.</p>
+                            <h2 class="card-title" style="text-align:right;">Feb 2025</h2>
+                            <p class="card-description" style="text-align:right;">Started as a lead designer for the QuackHacks hackathon.</p>
                         </div>
                     </div>
                     <div style="margin-top: 10px">
@@ -62,10 +62,9 @@
             </div>
             <!-- PROJECTS SCREEN -->
             <div class="section" id="projects">
-<!--                <h1 class="section-head">projects</h1>-->
                 <div class="card-holder">
-                    <a href="https://github.com/noahham/Portfolio-Website" target="_blank" class="card">
-                        <h2 class="card-title">Portfolio Website</h2>
+                    <a href="https://github.com/noahham/noahham.github.io" target="_blank" class="card">
+                        <h2 class="card-title">My Portfolio</h2>
                         <p class="card-description"><i>Solo Developer</i></p>
                         <p class="card-description">Hey look, it's this website.</p>
                     </a>
@@ -84,7 +83,7 @@
                         <p class="card-description"><i>Solo Developer</i></p>
                         <p class="card-description">A handy app to help with the daily Wordle.</p>
                     </a>
-                    <a href="https://github.com/noahham/Photography-Portfolio" target="_blank" class="card">
+                    <a href="https://noahham.com/photography/" target="_blank" class="card">
                         <h2 class="card-title">Photography Portfolio</h2>
                         <p class="card-description"><i>Solo Developer</i></p>
                         <p class="card-description">A stylish website to show my photography.</p>
