--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Noah Ham</title>
-    <link rel="icon" href="/assets/favicon.png?" type="image/png">
+    <link rel="icon" href="https://noahham.com/assets/favicon.png?" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
@@ -36,7 +36,7 @@
                         <div class="timeline-space"></div>
                         <div class="timeline-text">
                             <h2 class="card-title" style="text-align:right;">Feb 2025</h2>
-                            <p class="card-description" style="text-align:right;">Started as a lead designer for the QuackHacks hackathon.</p>
+                            <p class="card-description" style="text-align:right;">Hired as a lead designer for the QuackHacks hackathon.</p>
                         </div>
                     </div>
                     <div style="margin-top: 10px">
@@ -72,6 +72,11 @@
                         <h2 class="card-title">Byte 'n Bite</h2>
                         <p class="card-description"><i>Frontend Developer</i></p>
                         <p class="card-description">An AI powered recipe generator.</p>
+                    </a>
+                    <a href="https://noahham.com/trebbbble/" target="_blank" class="card">
+                        <h2 class="card-title">Trebbbble</h2>
+                        <p class="card-description"><i>Solo Developer</i></p>
+                        <p class="card-description">A handy website to recognize music from media.</p>
                     </a>
                     <a href="https://github.com/dhaddad-bit/HackUO2024" target="_blank" class="card">
                         <h2 class="card-title">Mental Health Journal</h2>
