favicon theme preference update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Noah Ham</title>
-    <link rel="icon" href="https://noahham.com/assets/favicon.png?" type="image/png">
+    <link rel="icon" href="https://noahham.com/assets/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" href="https://noahham.com/assets/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
