--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Noah Ham</title>
     <link rel="icon" href="https://noahham.com/assets/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
     <link rel="icon" href="https://noahham.com/assets/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
