added horizontal scroll to projects on mobile

--- a/index.html
+++ b/index.html
@@ -64,37 +64,44 @@
             </div>
             <!-- PROJECTS SCREEN -->
             <div class="section" id="projects">
+
                 <div class="card-holder">
-                    <a href="https://github.com/noahham/noahham.github.io" target="_blank" class="card">
-                        <h2 class="card-title">My Portfolio</h2>
-                        <p class="card-description"><i>Solo Developer</i></p>
-                        <p class="card-description">Hey look, it's this website.</p>
-                    </a>
-                    <a href="https://github.com/sbergcoding/quack_hacks_2025_2.0" target="_blank" class="card">
-                        <h2 class="card-title">Byte 'n Bite</h2>
-                        <p class="card-description"><i>Frontend Developer</i></p>
-                        <p class="card-description">An AI powered recipe generator.</p>
-                    </a>
-                    <a href="https://noahham.com/trebbbble/" target="_blank" class="card">
-                        <h2 class="card-title">Trebbbble</h2>
-                        <p class="card-description"><i>Solo Developer</i></p>
-                        <p class="card-description">A handy website to recognize music from media.</p>
-                    </a>
-                    <a href="https://github.com/dhaddad-bit/HackUO2024" target="_blank" class="card">
-                        <h2 class="card-title">Mental Health Journal</h2>
-                        <p class="card-description"><i>Backend Developer</i></p>
-                        <p class="card-description">A comprehensive app for keeping up mental health.</p>
-                    </a>
-                    <a href="https://github.com/noahham/Wordle-Solver" target="_blank" class="card">
-                        <h2 class="card-title">Wordle Solver</h2>
-                        <p class="card-description"><i>Solo Developer</i></p>
-                        <p class="card-description">A handy app to help with the daily Wordle.</p>
-                    </a>
-                    <a href="https://noahham.com/photography/" target="_blank" class="card">
-                        <h2 class="card-title">Photography Portfolio</h2>
-                        <p class="card-description"><i>Solo Developer</i></p>
-                        <p class="card-description">A stylish website to show my photography.</p>
-                    </a>
+                    <div class="row">
+                        <a href="https://github.com/noahham/noahham.github.io" target="_blank" class="card">
+                            <h2 class="card-title">My Portfolio</h2>
+                            <p class="card-description"><i>Solo Developer</i></p>
+                            <p class="card-description">Hey look, it's this website.</p>
+                        </a>
+                        <a href="https://github.com/sbergcoding/quack_hacks_2025_2.0" target="_blank" class="card">
+                            <h2 class="card-title">Byte 'n Bite</h2>
+                            <p class="card-description"><i>Frontend Developer</i></p>
+                            <p class="card-description">An AI powered recipe generator.</p>
+                        </a>
+                    </div>
+                    <div class="row">
+                        <a href="https://noahham.com/trebbbble/" target="_blank" class="card">
+                            <h2 class="card-title">Trebbbble</h2>
+                            <p class="card-description"><i>Solo Developer</i></p>
+                            <p class="card-description">A handy website to recognize music from media.</p>
+                        </a>
+                        <a href="https://github.com/dhaddad-bit/HackUO2024" target="_blank" class="card">
+                            <h2 class="card-title">Mental Health Journal</h2>
+                            <p class="card-description"><i>Backend Developer</i></p>
+                            <p class="card-description">A comprehensive app for keeping up mental health.</p>
+                        </a>
+                    </div>
+                    <div class="row">
+                        <a href="https://github.com/noahham/Wordle-Solver" target="_blank" class="card">
+                            <h2 class="card-title">Wordle Solver</h2>
+                            <p class="card-description"><i>Solo Developer</i></p>
+                            <p class="card-description">A handy app to help with the daily Wordle.</p>
+                        </a>
+                        <a href="https://noahham.com/photography/" target="_blank" class="card">
+                            <h2 class="card-title">Photography Portfolio</h2>
+                            <p class="card-description"><i>Solo Developer</i></p>
+                            <p class="card-description">A stylish website to show my photography.</p>
+                        </a>
+                    </div>
                 </div>
             </div>
             <!-- ABOUT SCREEN -->
