small jobs wording change

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="timeline-space"></div>
                         <div class="timeline-text">
                             <h2 class="card-title" style="text-align:right;">Feb 2025</h2>
-                            <p class="card-description" style="text-align:right;">Hired as a lead designer for the QuackHacks hackathon.</p>
+                            <p class="card-description" style="text-align:right;">Hired as a lead designer for UO's QuackHacks hackathon.</p>
                         </div>
                     </div>
                     <div style="margin-top: 10px">
