several small mobile changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="https://noahham.com/assets/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
     <link rel="stylesheet" href="style.css">
 </head>
-    <body>
+    <body class="hidden-scrollbar">
         <nav class="nav-bar">
             <a href="#name" class="nav-link"><h3>nh</h3></a>
             <a href="#experience" class="nav-link"><h3>experience</h3></a>
@@ -85,7 +85,7 @@
                             <p class="card-description">A handy website to recognize music from media.</p>
                         </a>
                         <a href="https://github.com/dhaddad-bit/HackUO2024" target="_blank" class="card">
-                            <h2 class="card-title">Mental Health Journal</h2>
+                            <h2 class="card-title">Wellness Journal</h2>
                             <p class="card-description"><i>Backend Developer</i></p>
                             <p class="card-description">A comprehensive app for keeping up mental health.</p>
                         </a>
@@ -97,7 +97,7 @@
                             <p class="card-description">A handy app to help with the daily Wordle.</p>
                         </a>
                         <a href="https://noahham.com/photography/" target="_blank" class="card">
-                            <h2 class="card-title">Photography Portfolio</h2>
+                            <h2 class="card-title">Photo Portfolio</h2>
                             <p class="card-description"><i>Solo Developer</i></p>
                             <p class="card-description">A stylish website to show my photography.</p>
                         </a>
@@ -116,6 +116,8 @@
                 </div>
             </div>
         </main>
-        <script src="animation.js"></script>
+        <script src="scripts/heroAnimation.js"></script>
+        <script src="scripts/scrollTo.js"></script>
+        <script src="scripts/onLoad.js"></script>
     </body>
 </html>
