projects layout update

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
             </div>
             <!-- PROJECTS SCREEN -->
             <div class="section" id="projects">
-
                 <div class="card-holder">
                     <div class="row">
                         <a href="https://github.com/noahham/noahham.github.io" target="_blank" class="card">
@@ -107,7 +106,9 @@
             <!-- ABOUT SCREEN -->
             <div class="section" id="about">
 <!--                <h1 class="section-head">about</h1>-->
-                <p>I'm Noah, currently studying computer science as a freshman at the University of Oregon.<br><br>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m a designer for my schools hackathon, QuackHacks, while also being a full-time student.<br><br>If you're interested in working on anything together, feel free to contact me on any of the platforms below.</p>
+                <p style="padding-top:100px;">I'm Noah, currently studying computer science as a freshman at the University of Oregon.</p>
+                <p>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m a designer for my schools hackathon, QuackHacks, while also being a full-time student.</p>
+                <p>If you're interested in working on anything together, feel free to contact me on any of the platforms below.</p>
                 <div class="socials">
                     <a href="mailto:noahham25@gmail.com" target="_blank"><p class="social-text">email</p></a>
                     <a href="https://www.linkedin.com/in/noah-ham/" target="_blank"><p class="social-text">linkedin</p></a>
