sections spacing update

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <!-- ABOUT SCREEN -->
             <div class="section" id="about">
 <!--                <h1 class="section-head">about</h1>-->
-                <p style="padding-top:100px;">I'm Noah, currently studying computer science as a freshman at the University of Oregon.</p>
+                <p>I'm Noah, currently studying computer science as a freshman at the University of Oregon.</p>
                 <p>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m a designer for my schools hackathon, QuackHacks, while also being a full-time student.</p>
                 <p>If you're interested in working on anything together, feel free to contact me on any of the platforms below.</p>
                 <div class="socials">
