--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body class="hidden-scrollbar">
-        <nav class="nav-bar">
-            <a href="#name" class="nav-link"><h3>nh</h3></a>
-            <a href="#experience" class="nav-link"><h3>experience</h3></a>
-            <a href="#projects" class="nav-link"><h3>projects</h3></a>
-            <a href="#about" class="nav-link"><h3>about</h3></a>
-        </nav>
+        <nav class="nav-bar"></nav>
         <main class="main">
             <!-- HERO SCREEN -->
             <a href="#experience" class="section" id="name">
@@ -28,7 +23,6 @@
             </a>
             <!-- EXPERIENCE SCREEN -->
             <div class="section" id="experience">
-<!--                <h1 class="section-head">experience</h1>-->
                 <div class="timeline-holder">
                     <div class="timeline-block">
                         <div class="timeline-text">
@@ -105,7 +99,6 @@
             </div>
             <!-- ABOUT SCREEN -->
             <div class="section" id="about">
-<!--                <h1 class="section-head">about</h1>-->
                 <p>I'm Noah, currently studying computer science as a freshman at the University of Oregon.</p>
                 <p>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m a designer for my schools hackathon, QuackHacks, while also being a full-time student.</p>
                 <p>If you're interested in working on anything together, feel free to contact me on any of the platforms below.</p>
