renamed assets folder

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <a href="mailto:noahham25@gmail.com" target="_blank"><p class="social-text">email</p></a>
                     <a href="https://www.linkedin.com/in/noah-ham/" target="_blank"><p class="social-text">linkedin</p></a>
                     <a href="https://www.github.com/noahham/" target="_blank"><p class="social-text">github</p></a>
-                    <a href="assets/noah-ham-resume.pdf" target="_blank"><p class="social-text">resume</p></a>
+                    <a href="media/noah-ham-resume.pdf" target="_blank"><p class="social-text">resume</p></a>
                 </div>
             </div>
         </main>
