--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Noah Ham</title>
-    <link rel="icon" href="https://noahham.com/assets/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
-    <link rel="icon" href="https://noahham.com/assets/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
     <body class="hidden-scrollbar">
         <nav class="nav-bar"></nav>
