Changed font and removed project positions

--- a/index.html
+++ b/index.html
@@ -62,36 +62,30 @@
                     <div class="row">
                         <a href="https://github.com/noahham/noahham.github.io" target="_blank" class="card">
                             <h2 class="card-title">My Portfolio</h2>
-                            <p class="card-description"><i>Solo Developer</i></p>
                             <p class="card-description">Hey look, it's this website.</p>
                         </a>
                         <a href="https://github.com/sbergcoding/quack_hacks_2025_2.0" target="_blank" class="card">
                             <h2 class="card-title">Byte 'n Bite</h2>
-                            <p class="card-description"><i>Frontend Developer</i></p>
                             <p class="card-description">An AI powered recipe generator.</p>
                         </a>
                     </div>
                     <div class="row">
                         <a href="https://noahham.com/trebbbble/" target="_blank" class="card">
                             <h2 class="card-title">Trebbbble</h2>
-                            <p class="card-description"><i>Solo Developer</i></p>
                             <p class="card-description">A handy website to recognize music from media.</p>
                         </a>
                         <a href="https://github.com/dhaddad-bit/HackUO2024" target="_blank" class="card">
                             <h2 class="card-title">Wellness Journal</h2>
-                            <p class="card-description"><i>Backend Developer</i></p>
                             <p class="card-description">A comprehensive app for keeping up mental health.</p>
                         </a>
                     </div>
                     <div class="row">
                         <a href="https://github.com/noahham/Wordle-Solver" target="_blank" class="card">
                             <h2 class="card-title">Wordle Solver</h2>
-                            <p class="card-description"><i>Solo Developer</i></p>
                             <p class="card-description">A handy app to help with the daily Wordle.</p>
                         </a>
                         <a href="https://noahham.com/photography/" target="_blank" class="card">
                             <h2 class="card-title">Photo Portfolio</h2>
-                            <p class="card-description"><i>Solo Developer</i></p>
                             <p class="card-description">A stylish website to show my photography.</p>
                         </a>
                     </div>
@@ -100,7 +94,7 @@
             <!-- ABOUT SCREEN -->
             <div class="section" id="about">
                 <p>I'm Noah, currently studying computer science as a freshman at the University of Oregon.</p>
-                <p>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m a designer for my schools hackathon, QuackHacks, while also being a full-time student.</p>
+                <p>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m a designer for my school's hackathon, QuackHacks, while also being a full-time student.</p>
                 <p>If you're interested in working on anything together, feel free to contact me on any of the platforms below.</p>
                 <div class="socials">
                     <a href="mailto:noahham25@gmail.com" target="_blank"><p class="social-text">email</p></a>
