added slight brightness increase when hovering cards

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="timeline-holder">
                     <div class="timeline-block">
                         <div class="timeline-text">
-                            <h2 class="card-title" style="text-align:right;">Feb 2022 - Sep 2024</h2>
+                            <h2 class="card-title" style="text-align:right;">Feb 2022 &rarr; Sep 2024</h2>
                             <p class="card-description" style="text-align:right;">Worked as a store associate at a Five Below retail store.</p>
                         </div>
                         <div class="timeline-space"></div>
@@ -35,7 +35,7 @@
                             <p class="card-description" style="text-align:right;">Hired as a lead designer for UO's QuackHacks hackathon.</p>
                         </div>
                     </div>
-                    <div style="margin-top: 10px">
+                    <div style="margin-top: 10px;">
                         <div class="timeline-dot"></div>
                         <div class="line"></div>
                         <div class="timeline-dot"></div>
