--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         </a>
                         <a href="https://github.com/dhaddad-bit/HackUO2024" target="_blank" class="card">
                             <h2 class="card-title">Wellness Journal</h2>
-                            <p class="card-description">A comprehensive app for keeping up mental health.</p>
+                            <p class="card-description">A comprehensive app to keep up mental health.</p>
                         </a>
                     </div>
                     <div class="row">
