makes breakout page go back to the projects section

--- a/projects/trebbbble.html
+++ b/projects/trebbbble.html
@@ -95,7 +95,7 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com"><p class="back-text">&larr; Back to Home</p></a>
+            <a href="https://noahham.com/#projects"><p class="back-text">&larr; Back to Home</p></a>
             <div class="text-holder">
                 <h2 style="margin-bottom:3rem;">Trebbbble</h2>
                 <p>A website that can recognize music from short-form videos.</p>
