added page title

--- a/projects/trebbbble.html
+++ b/projects/trebbbble.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Project Name</title>
+        <title>Trebbbble</title>
         <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
         <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
         <link rel="stylesheet" href="../styles/main.css">
@@ -90,7 +90,6 @@
 
                 .icon {width: 25px;}
             }
-
         </style>
     </head>
     <body>
