--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Noah Ham</title>
-    <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
-    <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
-    <link rel="stylesheet" href="styles/main.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Noah Ham</title>
+        <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
+        <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
+        <link rel="stylesheet" href="styles/main.css">
+    </head>
     <body class="hidden-scrollbar">
         <nav class="nav-bar"></nav>
         <main class="main">
@@ -86,7 +86,7 @@
                         </a>
                         <a href="https://noahham.com/photography/" target="_blank" class="card">
                             <h2 class="card-title">Photo Portfolio</h2>
-                            <p class="card-description">A stylish website to show my photography.</p>
+                            <p class="card-description">A stylish website to showcase my photography.</p>
                         </a>
                     </div>
                 </div>
