back button optimization

--- a/projects/trebbbble.html
+++ b/projects/trebbbble.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Trebbbble</title>
         <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
         <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
@@ -94,7 +94,7 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/#projects"><p class="back-text">&larr; Back to Home</p></a>
+            <a href="https://noahham.com/#projects" class="back-link"><p>&larr; Back to Home</p></a>
             <div class="text-holder">
                 <h2 style="margin-bottom:3rem;">Trebbbble</h2>
                 <p>A website that can recognize music from short-form videos.</p>
