optimized link classes

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                 <p>I love creating pretty much anything that can be made on a computer. Programming, design, motion graphics, film editing, photography—these are all industries that I love to invest my passion into. Right now, I’m a designer for my school's hackathon, QuackHacks, while also being a full-time student.</p>
                 <p>If you're interested in working on anything together, feel free to contact me on any of the platforms below.</p>
                 <div class="link-holder">
-                    <a href="mailto:noahham25@gmail.com" target="_blank"><p class="social-text">email</p></a>
-                    <a href="https://www.linkedin.com/in/noah-ham/" target="_blank"><p class="social-text">linkedin</p></a>
-                    <a href="https://www.github.com/noahham/" target="_blank"><p class="social-text">github</p></a>
-                    <a href="media/noah-ham-resume.pdf" target="_blank"><p class="social-text">resume</p></a>
+                    <a href="mailto:noahham25@gmail.com" target="_blank" class="social-link"><p>email</p></a>
+                    <a href="https://www.linkedin.com/in/noah-ham/" target="_blank" class="social-link"><p>linkedin</p></a>
+                    <a href="https://www.github.com/noahham/" target="_blank" class="social-link"><p>github</p></a>
+                    <a href="media/noah-ham-resume.pdf" target="_blank" class="social-link"><p>resume</p></a>
                 </div>
             </div>
         </main>
