optimized link classes

--- a/projects/trebbbble.html
+++ b/projects/trebbbble.html
@@ -94,7 +94,7 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/#projects" class="back-link"><p>&larr; Back to Home</p></a>
+            <a href="https://noahham.com/#projects" class="back-link"><p>&larr; back to home</p></a>
             <div class="text-holder">
                 <h2 style="margin-bottom:3rem;">Trebbbble</h2>
                 <p>A website that can recognize music from short-form videos.</p>
@@ -117,8 +117,8 @@
                 </div>
                 <p class="dramatic">Using ACRCloud's music recognition API and some relatively simple requests, users can provide a link to whatever short-form content they like and have some music displayed to them.</p>
                 <div class="link-holder">
-                    <a href="https://noahham.com/trebbbble/" target="_blank"><p class="social-text">website</p></a>
-                    <a href="https://github.com/noahham/trebbbble" target="_blank"><p class="social-text">github</p></a>
+                    <a href="https://noahham.com/trebbbble/" target="_blank" class="social-link"><p>website</p></a>
+                    <a href="https://github.com/noahham/trebbbble" target="_blank" class="social-link"><p>github</p></a>
                 </div>
             </div>
         </main>
