--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/" class="back-link"><p class="back-text">&larr;&ensp;Back to Home</p></a>
+            <a href="https://noahham.com/" class="back-link"><p>&larr;&ensp;back to home</p></a>
             <h1 class="error">404</h1>
             <p class="error-message">Sorry, the page you're looking for does not exist.</p>
         </main>
