improved spacing on larger screens

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </a>
                         <a href="https://github.com/sbergcoding/quack_hacks_2025_2.0" target="_blank" class="card">
                             <h2 class="card-title">Byte 'n Bite</h2>
-                            <p class="card-description">An AI powered recipe generator.</p>
+                            <p class="card-description">An AI powered recipe<br>generator.</p>
                         </a>
                     </div>
                     <div class="row">
