updated breakout page links

--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -52,7 +52,7 @@
                 </div>
                 <p class="dramatic">This is the premise of the animation. While it's relatively simple, just an animation of translation and text color, it's also smooth and elegant.</p>
                 <div class="link-holder">
-                    <a href="https://github.com/noahham/wordle-solver/" target="_blank" class="social-link"><p>github</p></a>
+                    <a href="https://github.com/noahham/noahham.github.io/" target="_blank" class="social-link"><p>github</p></a>
                 </div>
             </div>
         </main>
