--- a/projects/trebbbble.html
+++ b/projects/trebbbble.html
@@ -118,7 +118,7 @@
                 <p class="dramatic">Using ACRCloud's music recognition API and some relatively simple requests, users can provide a link to whatever short-form content they like and have some music displayed to them.</p>
                 <div class="link-holder">
                     <a href="https://noahham.com/trebbbble/" target="_blank" class="social-link"><p>website</p></a>
-                    <a href="https://github.com/noahham/trebbbble" target="_blank" class="social-link"><p>github</p></a>
+                    <a href="https://github.com/noahham/trebbbble/" target="_blank" class="social-link"><p>github</p></a>
                 </div>
             </div>
         </main>
