attached breakout pages to main page

--- a/index.html
+++ b/index.html
@@ -60,31 +60,31 @@
             <div class="section" id="projects">
                 <div class="card-holder">
                     <div class="row">
-                        <a href="https://github.com/noahham/noahham.github.io" target="_blank" class="card">
+                        <a href="projects/portfolio.html" class="card">
                             <h2 class="card-title">My Portfolio</h2>
                             <p class="card-description">Hey look, it's this website.</p>
                         </a>
-                        <a href="https://github.com/sbergcoding/quack_hacks_2025_2.0" target="_blank" class="card">
+                        <a href="projects/byte-n-bite.html" class="card">
                             <h2 class="card-title">Byte 'n Bite</h2>
                             <p class="card-description">An AI powered recipe<br>generator.</p>
                         </a>
                     </div>
                     <div class="row">
-                        <a href="https://noahham.com/trebbbble/" target="_blank" class="card">
+                        <a href="projects/trebbbble.html" class="card">
                             <h2 class="card-title">Trebbbble</h2>
                             <p class="card-description">A handy website to recognize music from media.</p>
                         </a>
-                        <a href="https://github.com/dhaddad-bit/HackUO2024" target="_blank" class="card">
+                        <a href="projects/wellness-journal.html" class="card">
                             <h2 class="card-title">Wellness Journal</h2>
                             <p class="card-description">A comprehensive app<br>to keep up mental<br>health.</p>
                         </a>
                     </div>
                     <div class="row">
-                        <a href="https://github.com/noahham/Wordle-Solver" target="_blank" class="card">
+                        <a href="projects/wordle-solver.html" class="card">
                             <h2 class="card-title">Wordle Solver</h2>
                             <p class="card-description">A handy app to help with the daily Wordle.</p>
                         </a>
-                        <a href="https://noahham.com/photography/" target="_blank" class="card">
+                        <a href="projects/photography.html" class="card">
                             <h2 class="card-title">Photo Portfolio</h2>
                             <p class="card-description">A stylish website to showcase my photography.</p>
                         </a>
