--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <a href="mailto:noahham25@gmail.com" target="_blank" class="social-link"><p>email</p></a>
                     <a href="https://www.linkedin.com/in/noah-ham/" target="_blank" class="social-link"><p>linkedin</p></a>
                     <a href="https://www.github.com/noahham/" target="_blank" class="social-link"><p>github</p></a>
-                    <a href="media/noah-ham-resume.pdf" target="_blank" class="social-link"><p>resume</p></a>
+                    <a href="media/resume.pdf" target="_blank" class="social-link"><p>resume</p></a>
                 </div>
             </div>
         </main>
