optimized classes and fixed hero spacing

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body class="hidden-scrollbar">
-        <nav class="nav-bar"></nav>
         <main class="main">
             <!-- HERO SCREEN -->
-            <a href="#experience" class="section" id="name">
+            <a href="#experience" id="name">
                 <h1 class="hero-title">noah</h1>
                 <div style="display:flex;">
                     <h1 class="hero-title" id="ham" style="margin-bottom:4rem;">ham</h1>
