--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <div class="timeline-space"></div>
                         <div class="timeline-text">
                             <h2 class="card-title" style="text-align:right;">Feb 2025</h2>
-                            <p class="card-description" style="text-align:right;">Hired as a lead designer for UO's QuackHacks hackathon.</p>
+                            <p class="card-description" style="text-align:right;">Hired as a lead designer for UO's hackathon, QuackHacks.</p>
                         </div>
                     </div>
                     <div style="margin-top: 10px;">
@@ -46,7 +46,7 @@
                     <div class="timeline-block">
                         <div class="timeline-text">
                             <h2 class="card-title">May 2024</h2>
-                            <p class="card-description">Graduated from Vista Del Lago High School with a 4.0 GPA.</p>
+                            <p class="card-description">Graduated from Vista Del Lago High School with a 4.1 GPA.</p>
                         </div>
                         <div class="timeline-text">
                             <h2 class="card-title">Sep 2024</h2>
