updated privacy policy

--- a/projects/duckweb-autofill/privacy-policy.html
+++ b/projects/duckweb-autofill/privacy-policy.html
@@ -11,8 +11,7 @@
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/#projects" class="back-link"><p>&larr; back to home</p></a>
-            <div class="text-holder">
+            <div class="text-holder" style="margin-top: 0;">
                 <p><strong>DuckWeb Autofill</strong> is a Chrome extension designed to help users quickly log in to the University of Oregon’s DuckWeb portal by securely storing and autofilling their credentials.</p>
                 <h2 class="dramatic">What We Collect</h2>
                 <p>This extension only collects the following data if you explicitly provide it:</p>
