added duckweb autofill project

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                         </a>
                     </div>
                     <div class="row">
-                        <a href="projects/wordle-solver.html" class="card">
-                            <h2 class="card-title">Wordle Solver</h2>
-                            <p class="card-description">A handy app to help with the daily Wordle.</p>
+                        <a href="projects/duckweb-autofill.html" class="card">
+                            <h2 class="card-title">DuckWeb Autofill</h2>
+                            <p class="card-description">A simple extension to autofill your login for UO's DuckWeb.</p>
                         </a>
                         <a href="projects/photography.html" class="card">
                             <h2 class="card-title">Photo Portfolio</h2>
