--- a/404.html
+++ b/404.html
@@ -7,13 +7,38 @@
         <link rel="icon" href="https://noahham.com/media/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)">
         <link rel="icon" href="https://noahham.com/media/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)">
         <link rel="stylesheet" href="styles/main.css">
-        <link rel="stylesheet" href="styles/404.css">
+        <style>
+            main {
+                margin-top: 3rem;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .back-link {margin-bottom: 13rem;}
+
+            .back-link p {
+                color: #999999;
+                transition: all 0.5s;
+            }
+
+            .back-link:hover p {color: white;}
+
+            .error {
+                margin: 0 0 4rem;
+                padding: 0;
+                font-size: 3rem;
+                color: white;
+            }
+
+            .error-message {color: #999999;}
+        </style>
     </head>
     <body>
         <main>
-            <a href="https://noahham.com/" class="back-link"><p>&larr;&ensp;back to home</p></a>
+            <a href="index.html" class="back-link"><p>&larr;&ensp;back to home</p></a>
             <h1 class="error">404</h1>
-            <p class="error-message">Sorry, the page you're looking for does not exist.</p>
+            <p class="error-message">Sorry, but the page you're looking for doesn't exist.</p>
         </main>
     </body>
 </html>
